--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -24,9 +24,9 @@
     <a href="{{base}}">
         <div class="bottom_tab_wrapper">
 
-            <div class="bottom_tab_img">
+            <div class="bottom_tab_img" style="background-image: url('{{base}}/assets/home.png');">
             </div>
-                {% if page.url contains 'blog.html' or page.url contains 'characters.html' or page.url contains 'about.html' %}
+                {% if page.url contains 'blog.html' or page.url contains 'characters.html' or page.url contains 'about.html' or page.url contains '/comic/' or page.url contains '/blog/' %}
                 <div class="menu_header_text">Comic</div>
                 {% else %}
                 <div class="menu_header_text_current">Comic</div>
@@ -35,7 +35,7 @@
     </a>
     <a href="{{base}}/blog.html">
         <div class="bottom_tab_wrapper">
-            <div class="bottom_tab_img">
+            <div class="bottom_tab_img"  style="background-image: url('{{base}}/assets/blog.png');">
             </div>
                 {% if page.url contains 'blog.html' %}
                 <div class="menu_header_text_current">Blog</div>
@@ -46,7 +46,7 @@
     </a>
     <a href="{{base}}/characters.html">
         <div class="bottom_tab_wrapper">
-            <div class="bottom_tab_img">
+            <div class="bottom_tab_img"  style="background-image: url('{{base}}/assets/chars.png');">
             </div>
                 {% if page.url contains 'characters.html' %}
                 <div class="menu_header_text_current">Characters</div>
@@ -57,7 +57,7 @@
     </a>
     <a href="{{base}}/about.html">
         <div class="bottom_tab_wrapper">
-            <div class="bottom_tab_img">
+            <div class="bottom_tab_img"  style="background-image: url('{{base}}/assets/about.png');">
             </div>
                 {% if page.url contains 'about.html' %}
                 <div class="menu_header_text_current">About</div>
