--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -35,6 +35,15 @@
                 {% endfor %}
             </ul>
         </div>
+        <div id="mobile_sub_container">
+        <form action="https://getsimpleform.com/messages?form_api_token=d9fbe3b05597de14b1e5cc7db2ceea84" method="post" id="mobile_subscribe_form">
+          <div class="subscribe_container mobile_subscribe">
+            <input type='hidden' name='redirect_to' value='http://www.sealiconvalley.com/thankyou.html' />
+              <input type="text" name="email" class="subscribe_email" id="input_email" placeholder="Email Address"/>
+            <input class="subscribe_button" type='submit' value='Subscribe' />
+          </div>
+          </form>
+        </div>
     </div>
     {% include footer.html %}
 </body>
