--- a/assets/main.css
+++ b/assets/main.css
@@ -140,7 +140,6 @@ body {
     padding: 2px;
     margin: 0 0 30px;
     width: 100%;
-
     /* animation: item_animation 10s ease-in-out infinite; */
 }
 
@@ -163,9 +162,9 @@ body {
         column-count: 1;
     }
     #related_posts_masonry {
-          -moz-column-count: 1;
-          -webkit-column-count: 1;
-          column-count: 1;
+        -moz-column-count: 1;
+        -webkit-column-count: 1;
+        column-count: 1;
     }
 }
 
@@ -176,9 +175,9 @@ body {
         column-count: 1;
     }
     #related_posts_masonry {
-          -moz-column-count: 1;
-          -webkit-column-count: 1;
-          column-count: 1;
+        -moz-column-count: 1;
+        -webkit-column-count: 1;
+        column-count: 1;
     }
 }
 
@@ -189,9 +188,9 @@ body {
         column-count: 2;
     }
     #related_posts_masonry {
-          -moz-column-count: 3;
-          -webkit-column-count: 3;
-          column-count: 3;
+        -moz-column-count: 3;
+        -webkit-column-count: 3;
+        column-count: 3;
     }
 }
 
@@ -202,9 +201,9 @@ body {
         column-count: 2;
     }
     #related_posts_masonry {
-          -moz-column-count: 3;
-          -webkit-column-count: 3;
-          column-count: 3;
+        -moz-column-count: 3;
+        -webkit-column-count: 3;
+        column-count: 3;
     }
 }
 
@@ -215,13 +214,13 @@ body {
 }
 
 .excerpt_container {
-
-  border: 1px solid #fff;
-  -webkit-border-radius: 8px;
-  -moz-border-radius: 8px;
-  border-radius: 8px;
-  overflow: hidden;
+    border: 1px solid #fff;
+    -webkit-border-radius: 8px;
+    -moz-border-radius: 8px;
+    border-radius: 8px;
+    overflow: hidden;
 }
+
 .excerpt_container img {
     width: 100%;
 }
@@ -235,9 +234,8 @@ body {
     padding-bottom: 20px;
     background-color: #49545e;
     color: white;
-    padding-left:10px;
-    padding-right:10px;
-
+    padding-left: 10px;
+    padding-right: 10px;
     box-sizing: border-box;
     /** add this **/
     -moz-box-sizing: border-box;
@@ -357,8 +355,6 @@ body {
     top: 50%;
     transform: translateY(-50%);
     text-align: center;
-
-
     box-sizing: border-box;
     /** add this **/
     -moz-box-sizing: border-box;
@@ -374,7 +370,7 @@ body {
     height: 35px;
     text-align: center;
     font-size: 16px;
-    color:white;
+    color: white;
     text-transform: uppercase;
     border: 1px solid #41b0f7;
     -webkit-border-radius: 4px;
@@ -390,8 +386,6 @@ body {
     top: 50%;
     transform: translateY(-50%);
     display: table;
-
-
     box-sizing: border-box;
     /** add this **/
     -moz-box-sizing: border-box;
@@ -503,7 +497,6 @@ body {
     max-height: 100%;
     margin-top: 20px;
     margin-bottom: 20px;
-
     border: 1px solid #FFF;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
@@ -772,43 +765,45 @@ body {
 }
 
 .about_container {
-  width: 100%;
-  max-width: 900px;
-  display: block;
-  margin:0 auto;
-  padding-left: 20px;
-  padding-right: 20px;
-  text-align: center;
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -ms-box-sizing: border-box;
+    width: 100%;
+    max-width: 900px;
+    display: block;
+    margin: 0 auto;
+    padding-left: 20px;
+    padding-right: 20px;
+    text-align: center;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -ms-box-sizing: border-box;
 }
 
 .about_pic {
-  width: 80%;
+    width: 80%;
 }
 
 .about_pic.thankyou {
-  width: 100%;
-  margin-bottom: 20px;
+    width: 100%;
+    margin-bottom: 20px;
 }
 
 .about_text {
-  color: #636263;
-  text-align: left;
-  margin-bottom: 30px;
-  padding-left: 20px;
-  padding-right: 20px;
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -ms-box-sizing: border-box;
+    color: #636263;
+    text-align: left;
+    margin-bottom: 30px;
+    padding-left: 20px;
+    padding-right: 20px;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -ms-box-sizing: border-box;
 }
 
 .about_text.thankyou {
-  text-align: center;
+    text-align: center;
 }
+
+
 /*
 .about_container {
     width: 100%;
@@ -853,10 +848,11 @@ body {
 */
 
 .characters_container {
-  margin-bottom: 0px;
+    margin-bottom: 0px;
 }
+
 @media screen and (max-width: 800px) {
-  /*
+    /*
     .about_pic {
         width: 100%;
         float: none;
@@ -882,7 +878,6 @@ body {
     */
 }
 
-
 .about_title {
     font-weight: bold;
     font-size: 30px;
@@ -902,110 +897,111 @@ body {
 }
 
 .fish_ll {
-  position: relative;
-  text-align: center;
-  margin: 0 auto;
-  margin-bottom: 150px;
-  width: 100%;
-  max-width: 800px;
+    position: relative;
+    text-align: center;
+    margin: 0 auto;
+    margin-bottom: 150px;
+    width: 100%;
+    max-width: 800px;
 }
 
 .image_circle {
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
-  border: 4px solid rgb(65, 176, 247);;
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    border: 4px solid rgb(65, 176, 247);
+    ;
 }
 
 .rounded_image_container {
-  width: 100%;
-  position: absolute;
-  top: -100px;
-  text-align: center;
+    width: 100%;
+    position: absolute;
+    top: -100px;
+    text-align: center;
 }
+
 .rounded_image {
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
-  background-repeat: no-repeat;
-  margin: 0 auto;
-
-
-  box-sizing: border-box;
-  /** add this **/
-  -moz-box-sizing: border-box;
-  /** add this **/
-  -webkit-box-sizing: border-box;
-  /** add this **/
-  -ms-box-sizing: border-box;
-  /** add this **/
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    background-repeat: no-repeat;
+    margin: 0 auto;
+    box-sizing: border-box;
+    /** add this **/
+    -moz-box-sizing: border-box;
+    /** add this **/
+    -webkit-box-sizing: border-box;
+    /** add this **/
+    -ms-box-sizing: border-box;
+    /** add this **/
 }
 
 #rounded_octopus {
-background-image: url("splash_octopus.png");
-border: 8px solid #fce4d9;
-background-size: cover;
+    background-image: url("splash_octopus.png");
+    border: 8px solid #fce4d9;
+    background-size: cover;
 }
 
 #rounded_octopus_back {
-background-image: url("octopus_icon_power.png");
-border: 8px solid #fce4d9;
-background-size: cover;
+    background-image: url("octopus_icon_power.png");
+    border: 8px solid #fce4d9;
+    background-size: cover;
 }
 
 #rounded_dolphin {
-background-image: url("splash_dolphin.png");
-border: 8px solid #c3dbea;
-background-size: cover;
+    background-image: url("splash_dolphin.png");
+    border: 8px solid #c3dbea;
+    background-size: cover;
 }
 
 #rounded_dolphin_back {
-background-image: url("dolphin_icon_power.png");
-border: 8px solid #c3dbea;
-background-size: cover;
+    background-image: url("dolphin_icon_power.png");
+    border: 8px solid #c3dbea;
+    background-size: cover;
 }
 
 #rounded_narwhal {
-background-image: url("splash_narwhal.png");
-border: 8px solid #f9b9c8;
-background-size: cover;
+    background-image: url("splash_narwhal.png");
+    border: 8px solid #f9b9c8;
+    background-size: cover;
 }
 
 #rounded_narwhal_back {
-background-image: url("narwhal_icon_power.png");
-border: 8px solid #f9b9c8;
-background-size: cover;
+    background-image: url("narwhal_icon_power.png");
+    border: 8px solid #f9b9c8;
+    background-size: cover;
 }
 
 #rounded_bubble {
-background-image: url("splash_bubble.png");
-border: 8px solid #bccdef;
-background-size: cover;
+    background-image: url("splash_bubble.png");
+    border: 8px solid #bccdef;
+    background-size: cover;
 }
 
 #rounded_bubble_back {
-background-image: url("bubble_icon_power.png");
-border: 8px solid #bccdef;
-background-size: cover;
+    background-image: url("bubble_icon_power.png");
+    border: 8px solid #bccdef;
+    background-size: cover;
 }
 
 #rounded_shark {
-background-image: url("splash_shark.png");
-background-size: cover;
-border: 8px solid #abb6d9;
+    background-image: url("splash_shark.png");
+    background-size: cover;
+    border: 8px solid #abb6d9;
 }
 
 #rounded_shark_back {
-background-image: url("shark_icon_power.png");
-background-size: cover;
-border: 8px solid #abb6d9;
+    background-image: url("shark_icon_power.png");
+    background-size: cover;
+    border: 8px solid #abb6d9;
 }
+
 .fish_text {
-  width: 100%;
-  border: 1px solid #e8ecef;
-  border-radius: 2px;
-  box-shadow: 0 0 0 1px rgba(0,0,0,.1), 0 2px 3px rgba(0,0,0,.2);
-  padding-top: 130px;
+    width: 100%;
+    border: 1px solid #e8ecef;
+    border-radius: 2px;
+    box-shadow: 0 0 0 1px rgba(0, 0, 0, .1), 0 2px 3px rgba(0, 0, 0, .2);
+    padding-top: 130px;
 }
 
 .fish_name_2 {
@@ -1031,76 +1027,129 @@ border: 8px solid #abb6d9;
 }
 
 .fish_desc_3 {
-  color: #8e8e8e;
+    color: #8e8e8e;
     margin-top: 10px;
     display: block;
     width: 100%;
     letter-spacing: 1px;
 }
 
+.flipped {
+    -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    -ms-transform: rotateY(180deg);
+    -o-transform: rotateY(180deg);
+    transform: rotateY(180deg);
+}
 
-    .flipped {
-        -webkit-transform: rotateY(180deg);
-        -moz-transform: rotateY(180deg);
-        -ms-transform: rotateY(180deg);
-        -o-transform: rotateY(180deg);
-        transform: rotateY(180deg);
-    }
+.flipper {
+    /*transition*/
+    -webkit-transition: 0.6s;
+    -moz-transition: 0.6s;
+    -o-transition: 0.6s;
+    transition: 0.6s;
+    /*transform-style*/
+    -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
+    -ms-transform-style: preserve-3d;
+    -o-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    position: relative;
+    -webkit-tap-highlight-color: transparent;
+}
 
-    .flipper {
-        /*transition*/
-        -webkit-transition: 0.6s;
-        -moz-transition: 0.6s;
-        -o-transition: 0.6s;
-        transition: 0.6s;
-        /*transform-style*/
-        -webkit-transform-style: preserve-3d;
-        -moz-transform-style: preserve-3d;
-        -ms-transform-style: preserve-3d;
-        -o-transform-style: preserve-3d;
-        transform-style: preserve-3d;
-        position: relative;
-        -webkit-tap-highlight-color: transparent;
-    }
-    /* front pane, placed above back */
 
-    .front {
-        z-index: 2;
-    }
-    /* back, initially hidden pane */
+/* front pane, placed above back */
 
-    .back {
-        /*transform*/
-        -webkit-transform: rotateY(180deg);
-        -moz-transform: rotateY(180deg);
-        -ms-transform: rotateY(180deg);
-        -o-transform: rotateY(180deg);
-        transform: rotateY(180deg);
-    }
-    /* hide back of pane during swap */
+.front {
+    z-index: 2;
+}
 
-    .front,
-    .back {
-        /*backface-visibility*/
-        -webkit-backface-visibility: hidden;
-        -moz-backface-visibility: hidden;
-        -ms-backface-visibility: hidden;
-        -o-backface-visibility: hidden;
-        backface-visibility: hidden;
-        position: absolute;
-        top: 0;
-        left: 0;
-    }
 
-    .flip-container,
-    .front,
-    .back,
-    .flipper {
-        width: 200px;
-        height: 200px;
-    }
+/* back, initially hidden pane */
 
-    .flip-container {
-        text-align: center;
-        margin: 0 auto;
-    }
+.back {
+    /*transform*/
+    -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    -ms-transform: rotateY(180deg);
+    -o-transform: rotateY(180deg);
+    transform: rotateY(180deg);
+}
+
+
+/* hide back of pane during swap */
+
+.front, .back {
+    /*backface-visibility*/
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -ms-backface-visibility: hidden;
+    -o-backface-visibility: hidden;
+    backface-visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+
+.flip-container, .front, .back, .flipper {
+    width: 200px;
+    height: 200px;
+}
+
+.flip-container {
+    text-align: center;
+    margin: 0 auto;
+}
+
+.sidenav {
+    height: 100%;
+    /* 100% Full-height */
+    width: 0;
+    /* 0 width - change this with JavaScript */
+    position: fixed;
+    /* Stay in place */
+    z-index: 100000000;
+    /* Stay on top */
+    top: 0;
+    right: 0;
+    overflow-x: hidden;
+    /* Disable horizontal scroll */
+    /* Place content 60px from the top */
+    transition: 0.2s;
+    /* 0.5 second transition effect to slide in the sidenav */
+    background-color: white;
+    display: flex;
+    flex-flow: column;
+}
+
+
+/* Position and style the close button (top right corner) */
+
+.nav_item {
+    width: 100%;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: lighter;
+    font-size: 16px;
+    text-decoration: none;
+    color: black;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    justify-content: space-around;
+}
+
+.nav_item>img {
+    width: 30px;
+    height: 30px;
+}
+
+.nav_item .nav_label {
+    width: 150px;
+    height: 100%;
+    text-align: center;
+    display: flex;
+    align-items: center;
+}
